fixed an issue where z-indexes where preventing links in the main conteint from being clicked

--- a/style.css
+++ b/style.css
@@ -19,7 +19,11 @@ div.main{
     background-repeat: no-repeat;
     background-size: 100% 100%;
     width: 100%;
-    z-index: -1;
+    z-index: 0;
+}
+
+section.hero{
+    z-index: 1;
 }
 
 p{
